force-app/main/default/objects/Product_Potential__c/Product_Potential__c.object-meta.xml
<CustomObject>
    <description>Stores the potential value against each product per division for a client.</description>
    <label>Product Potential</label>
    <nameField>
        <label>Product Potential Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Product Potential</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>