force-app/main/default/objects/Product_Potential__c/fields/Client_Plan__c.field-meta.xml
<CustomField>
    <fullName>Client_Plan__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Client Plan</label>
    <referenceTo>Client_Plan__c</referenceTo>
    <relationshipLabel>Product Potential</relationshipLabel>
    <relationshipName>Product_Potential</relationshipName>
    <type>Lookup</type>
</CustomField>