force-app/main/default/objects/Product_Potential__c/fields/Product_Division__c.field-meta.xml
<CustomField>
    <fullName>Product_Division__c</fullName>
    <description>Various product categories in which Standard Bank Operates</description>
    <label>Product Division</label>
    <length>80</length>
    <type>Text</type>
</CustomField>