force-app/main/default/objects/Product_Potential__c/fields/Product_Potential__c.field-meta.xml
<CustomField>
    <fullName>Product_Potential__c</fullName>
    <label>Product Potential</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Medium on Track</fullName>
            </value>
            <value>
                <fullName>Not on Track</fullName>
            </value>
            <value>
                <fullName>On Track</fullName>
            </value>
            <value>
                <fullName>Not Applicable</fullName>
                <default>true</default>
                <label>Not Applicable</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>