force-app/main/default/objects/Product_Potential__c/fields/Product_Subset__c.field-meta.xml
<CustomField>
    <fullName>Product_Subset__c</fullName>
    <description>Product in a specific division.</description>
    <label>Product Subset</label>
    <length>80</length>
    <type>Text</type>
</CustomField>